Adding padding and bgcolor on post

--- a/client/src/sass/abstracts/_variables.scss
+++ b/client/src/sass/abstracts/_variables.scss
@@ -7,6 +7,7 @@ $color-grey-1: #999;
 $color-grey-2: #dbdbdb;
 $color-grey-3: #fafafa;
 $color-grey-4: #efefef;
+$color-green-bg: #e0ebeb;
 
 $color-secondary: #4A9C2D;
 $color-secondary-dark: #477628;
