--- a/client/src/sass/components/_post-dialog.scss
+++ b/client/src/sass/components/_post-dialog.scss
@@ -16,7 +16,7 @@
     grid-column: 1 / span 1;
     background-color: #FFFFFF;
     img {
-      object-fit: cover;
+      object-fit: contain;
       width: 100%;
       height: 100%;
     }
@@ -102,6 +102,12 @@
   @include respond(phone) {
     @include simplePostDialog(postDialog);
     grid-template-rows: min-content 50rem min-content;
+    
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+
     border: none;
     &__image {
       @include simplePostDialog(image);
