--- a/client/src/sass/components/_post-dialog.scss
+++ b/client/src/sass/components/_post-dialog.scss
@@ -16,7 +16,7 @@
     grid-column: 1 / span 1;
     background-color: #FFFFFF;
     img {
-      object-fit: contain;
+      object-fit: cover;
       width: 100%;
       height: 100%;
     }
@@ -101,7 +101,7 @@
 
   @include respond(phone) {
     @include simplePostDialog(postDialog);
-    grid-template-rows: min-content 50rem min-content;
+    grid-template-rows: min-content min-content min-content;
     
     margin-top: 3rem;
     margin-bottom: 3rem;
