--- a/client/src/sass/components/_post-dialog.scss
+++ b/client/src/sass/components/_post-dialog.scss
@@ -15,6 +15,7 @@
     grid-row: 1 / -1;
     grid-column: 1 / span 1;
     background-color: #FFFFFF;
+    min-height: 35rem;
     img {
       object-fit: cover;
       width: 100%;
