--- a/client/src/sass/components/_post-dialog.scss
+++ b/client/src/sass/components/_post-dialog.scss
@@ -16,10 +16,30 @@
     grid-column: 1 / span 1;
     background-color: #FFFFFF;
     min-height: 35rem;
+    max-height: 65rem;
+    display: flex;
+    flex-direction: row-reverse;
     img {
       object-fit: cover;
       width: 100%;
       height: 100%;
+    }
+
+    a {
+      position: absolute;      
+      margin: 4rem 0.7rem;
+      background-color: $color-green-bg;
+      border-radius: 100px;
+      width: 2.5rem;
+      height: 2.5rem;
+      padding: 0.2rem;
+      opacity: 0.5;
+
+      span {
+          svg{
+            font-size: 2rem;            
+          }
+      }    
     }
 
     &--simple {
@@ -40,14 +60,11 @@
 
   &__header {
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
     padding: 1rem;
     background-color: $color-white;
-
-    *:not(:last-child) {
-      margin-right: 1.5rem;
-    }
+    text-align: center;    
 
     &--simple {
       @include simplePostDialog(header);
@@ -58,6 +75,12 @@
     margin-left: auto;
     display: flex;
     align-items: center;
+    position: absolute;
+    margin: 0.7rem;
+    background-color: $color-green-bg;
+    border-radius: 100px;
+    padding: 0.3rem;
+    opacity: 0.5;
   }
 
   &__stats {
